--- a/assets/css/extended/medium-zoom.css
+++ b/assets/css/extended/medium-zoom.css
@@ -8,7 +8,7 @@
 .medium-zoom-image--opened {
   z-index: 3;
   border-radius: var(--radius);
-  border: 1px solid rgba(124, 139, 154, 0.25);
+  /* border: 1px solid rgba(124, 139, 154, 0.25); */
 }
 
 img.medium-zoom-image--opened[loading="eager"],
