--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -88,8 +88,8 @@
 
 
 {{/* GoatCounter */}}
-<script
+{{/* <script
   data-goatcounter="https://saladvisor-blog.goatcounter.com/count"
   async
   src="//gc.zgo.at/count.js"
-></script>
+></script> */}}
