--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -25,9 +25,9 @@
 {{- $liteytembedJS := resources.Get "js/lite-yt-embed.js" }}
 {{- if not site.Params.assets.disableFingerprinting }}
     {{- $liteytembedJS_f := $liteytembedJS | fingerprint }}
-    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.3" integrity="{{ $liteytembedJS_f.Data.Integrity }}"></script>
+    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.4" integrity="{{ $liteytembedJS_f.Data.Integrity }}"></script>
     {{- else }}
-    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.3"></script>
+    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.4"></script>
 {{- end }}
 
 {{/* Load mediumZoom script */}}
@@ -88,8 +88,8 @@
 
 
 {{/* GoatCounter */}}
-{{/* <script
+<script
   data-goatcounter="https://saladvisor-blog.goatcounter.com/count"
   async
   src="//gc.zgo.at/count.js"
-></script> */}}
+></script>
